few lint fixes